--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,7 @@
       "type": "MIT"
     }
   ],
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "angular": "~1.3.7",
     "hammerjs": "~2.0.4",
     "font-awesome": "4.3.0"
